--- a/proje7.html
+++ b/proje7.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="proje7.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
 </head>
-<body class="show-chatbot">
+<body>
     <button class="chatbot-toggler">
         <span class="material-symbols-outlined">mode_comment</span>
         <span class="material-symbols-outlined">close</span>
@@ -15,15 +15,12 @@
    <div class="chatbot">
     <header>
         <h2>Chatbot</h2>
-        <span class="material-symbols-outlined">close</span>
+        <span class="close-btn material-symbols-outlined">close</span>
     </header>
     <ul class="chatbox">
         <li class="chat incoming">
             <span class="material-symbols-outlined">smart_toy</span>
             <p>Hi there ✋🏻 <br> How can I help you today?</p>
-        </li>
-        <li class="chat outgoing">
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
         </li>
     </ul>
     <div class="chat-input">
@@ -31,5 +28,6 @@
         <span id="send-btn" class="material-symbols-outlined">send</span>
     </div>
    </div> 
+   <script src="script7.js" defer></script>
 </body>
 </html>
